# because-i-can

./: README.md  quine.js  screen_puzzle.js
brute-force/: README.md  hack.js
connect-four/: README.md  connect-four.js  connect-four.old.js
gmtkjam-2022-prep/: Icon.vs  Pawn.gd  Pawn.tscn  README.md  Scene.tscn  export_presets.cfg  project.godot
gmtkjam-2022-prep/Math/Lecture1/: LookAtTrigger.gd  LookAtTrigger.tscn  LookAtTriggerPlayer.gd  RadialTrigger.gd  RadialTrigger.tscn  SpaceTransformDot.gd  SpaceTransformDot.tscn
gmtkjam-2022-prep/Math/Lecture3/: RegularPolygonDrawer.gd  RegularPolygonDrawer.tscn
gmtkjam-2022-prep/MeanwhileUtils/: FlexibleReconciler.gd  Reconciler.gd
godot-bevy/: README.md
godot-bevy/GodotBevyHostGame/: BevyHost.gdns  BevyLib.tres  HelloWorld.gdns  Scene.tscn  box.png.import  default_env.tres  project.godot
godot-bevy/bevy_gdnative/: Cargo.toml  Justfile
godot-bevy/bevy_gdnative/src/: bevy_app.rs  breakout.rs  gd_sync.rs  lib.rs
lexico-puzzle-solver/: README.md
processing-dice/: README.md  sketch.js
spoons/: .gitignore  README.md  spoons.py
tic-80-dice/: README.md  justfile  main.lua
tic-80-dice/src/: draw.lua  moremath.lua
tic-tac-toe/: README.md  connect-four.js  tic-tac-toe.js
tvtropes/: README.md  tvtropes.js
unity-math/: README.md
unity-math/Assets/MeanwhileUtils/: AutoRefFramework.cs  BaseReconciler.cs
unity-math/Assets/Scenes/: AdaptiveCamera.cs  AdaptiveCamera.unity  Coil.cs  (+3 more)
unity-math/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
wordmaker/: README.md  wordmaker.js  words.txt
