# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "bevy_gdnative"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = "0.10"
bevy = "0.7"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3